[tool.poetry]
name = "project-test"
version = "0.1.0"
description = "Description"
authors = ["Ilya Sesyunin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selene = "^1.0.2"
pytest = "^8.2.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
